crates/pg_syntax/tests/snapshots/postgres_regress/json@396.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"ia\": null}') as x(ia _int4);"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..58
    List@14..43
      FuncCall@14..43
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..43
          Sconst@29..43 "'{\"ia\": null}'"
    Ascii41@43..44 ")"
    Whitespace@44..45 " "
    Alias@45..49
      As@45..47 "as"
      Whitespace@47..48 " "
      Ident@48..49 "x"
    Ascii40@49..50 "("
    ColumnDef@50..58
      Ident@50..52 "ia"
      Whitespace@52..53 " "
      TypeName@53..58
        Ident@53..58 "_int4"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

