crates/pg_syntax/tests/snapshots/postgres_regress/json@397.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"ia\": 123}') as x(ia _int4);"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..57
    List@14..42
      FuncCall@14..42
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..42
          Sconst@29..42 "'{\"ia\": 123}'"
    Ascii41@42..43 ")"
    Whitespace@43..44 " "
    Alias@44..48
      As@44..46 "as"
      Whitespace@46..47 " "
      Ident@47..48 "x"
    Ascii40@48..49 "("
    ColumnDef@49..57
      Ident@49..51 "ia"
      Whitespace@51..52 " "
      TypeName@52..57
        Ident@52..57 "_int4"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

