crates/pg_syntax/tests/snapshots/postgres_regress/json@398.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"ia\": [1, \"2\", null, 4]}') as x(ia _int4);"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..71
    List@14..56
      FuncCall@14..56
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..56
          Sconst@29..56 "'{\"ia\": [1, \"2\", null ..."
    Ascii41@56..57 ")"
    Whitespace@57..58 " "
    Alias@58..62
      As@58..60 "as"
      Whitespace@60..61 " "
      Ident@61..62 "x"
    Ascii40@62..63 "("
    ColumnDef@63..71
      Ident@63..65 "ia"
      Whitespace@65..66 " "
      TypeName@66..71
        Ident@66..71 "_int4"
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

