crates/pg_syntax/tests/snapshots/postgres_regress/json@400.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"ia\": [[1], 2]}') as x(ia _int4);"
---
SelectStmt@0..64
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..62
    List@14..47
      FuncCall@14..47
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..47
          Sconst@29..47 "'{\"ia\": [[1], 2]}'"
    Ascii41@47..48 ")"
    Whitespace@48..49 " "
    Alias@49..53
      As@49..51 "as"
      Whitespace@51..52 " "
      Ident@52..53 "x"
    Ascii40@53..54 "("
    ColumnDef@54..62
      Ident@54..56 "ia"
      Whitespace@56..57 " "
      TypeName@57..62
        Ident@57..62 "_int4"
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

