crates/pg_syntax/tests/snapshots/postgres_regress/json@402.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"ia2\": [1, 2, 3]}') as x(ia2 int[][]);"
---
SelectStmt@0..69
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..63
    List@14..49
      FuncCall@14..49
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..49
          Sconst@29..49 "'{\"ia2\": [1, 2, 3]}'"
    Ascii41@49..50 ")"
    Whitespace@50..51 " "
    Alias@51..55
      As@51..53 "as"
      Whitespace@53..54 " "
      Ident@54..55 "x"
    Ascii40@55..56 "("
    ColumnDef@56..63
      Ident@56..59 "ia2"
      Whitespace@59..60 " "
      TypeName@60..63
        IntP@60..63 "int"
  Ascii91@63..64 "["
  Ascii93@64..65 "]"
  Ascii91@65..66 "["
  Ascii93@66..67 "]"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

