crates/pg_syntax/tests/snapshots/postgres_regress/json@403.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"ia2\": [[1, 2], [3, 4]]}') as x(ia2 int4[][]);"
---
SelectStmt@0..77
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..71
    List@14..56
      FuncCall@14..56
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..56
          Sconst@29..56 "'{\"ia2\": [[1, 2], [3, ..."
    Ascii41@56..57 ")"
    Whitespace@57..58 " "
    Alias@58..62
      As@58..60 "as"
      Whitespace@60..61 " "
      Ident@61..62 "x"
    Ascii40@62..63 "("
    ColumnDef@63..71
      Ident@63..66 "ia2"
      Whitespace@66..67 " "
      TypeName@67..71
        Ident@67..71 "int4"
  Ascii91@71..72 "["
  Ascii93@72..73 "]"
  Ascii91@73..74 "["
  Ascii93@74..75 "]"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

