crates/pg_syntax/tests/snapshots/postgres_regress/json@404.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"ia2\": [[[1], [2], [3]]]}') as x(ia2 int4[][]);"
---
SelectStmt@0..78
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..72
    List@14..57
      FuncCall@14..57
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..57
          Sconst@29..57 "'{\"ia2\": [[[1], [2],  ..."
    Ascii41@57..58 ")"
    Whitespace@58..59 " "
    Alias@59..63
      As@59..61 "as"
      Whitespace@61..62 " "
      Ident@62..63 "x"
    Ascii40@63..64 "("
    ColumnDef@64..72
      Ident@64..67 "ia2"
      Whitespace@67..68 " "
      TypeName@68..72
        Ident@68..72 "int4"
  Ascii91@72..73 "["
  Ascii93@73..74 "]"
  Ascii91@74..75 "["
  Ascii93@75..76 "]"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

