crates/pg_syntax/tests/snapshots/postgres_regress/json@406.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"out\": [{\"key\": 1}]}') as x(out json);"
---
SelectStmt@0..69
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..67
    List@14..52
      FuncCall@14..52
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..52
          Sconst@29..52 "'{\"out\": [{\"key\": 1}]}'"
    Ascii41@52..53 ")"
    Whitespace@53..54 " "
    Alias@54..58
      As@54..56 "as"
      Whitespace@56..57 " "
      Ident@57..58 "x"
    Ascii40@58..59 "("
    ColumnDef@59..67
      OutP@59..62 "out"
      Whitespace@62..63 " "
      TypeName@63..67
        Ident@63..67 "json"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

