crates/pg_syntax/tests/snapshots/postgres_regress/json@407.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"out\": \"{\\\"key\\\": 1}\"}') as x(out json);"
---
SelectStmt@0..71
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..69
    List@14..54
      FuncCall@14..54
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..54
          Sconst@29..54 "'{\"out\": \"{\\\"key\\\": 1 ..."
    Ascii41@54..55 ")"
    Whitespace@55..56 " "
    Alias@56..60
      As@56..58 "as"
      Whitespace@58..59 " "
      Ident@59..60 "x"
    Ascii40@60..61 "("
    ColumnDef@61..69
      OutP@61..64 "out"
      Whitespace@64..65 " "
      TypeName@65..69
        Ident@65..69 "json"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

